--- a/MLUnsupervisedApp/requirements.txt
+++ b/MLUnsupervisedApp/requirements.txt
@@ -29,6 +29,7 @@ pydeck==0.9.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
+plotly==6.0.1
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
