Add missingno for missing data visualization

--- a/MLUnsupervisedApp/requirements.txt
+++ b/MLUnsupervisedApp/requirements.txt
@@ -18,6 +18,7 @@ jsonschema-specifications==2025.4.1
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.1
+missingno==0.5.2
 narwhals==1.37.1
 numpy==2.2.5
 packaging==24.2
@@ -29,7 +30,6 @@ pydeck==0.9.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
-plotly==6.0.1
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
@@ -46,4 +46,3 @@ tornado==6.4.2
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
-plotly>=5.0.0
