--- a/MLUnsupervisedApp/requirements.txt
+++ b/MLUnsupervisedApp/requirements.txt
@@ -17,13 +17,14 @@ jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
-matplotlib==3.8.4
+matplotlib==3.10.3
 missingno==0.5.2
-narwhals==1.37.1
+narwhals==1.38.2
 numpy==2.2.5
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
+plotly==6.0.1
 protobuf==6.30.2
 pyarrow==20.0.0
 pydeck==0.9.1
@@ -34,7 +35,7 @@ referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
 scikit-learn==1.6.1
-scipy==1.15.2
+scipy==1.15.3
 seaborn==0.13.2
 six==1.17.0
 smmap==5.0.2
